{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 50,
  "lineage": "f9b06b0d-a567-db99-8699-d8a4d2960682",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_new_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226409335413:subnet/subnet-0664dd5a9ea37d94a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:selected",
                "values": [
                  "sel1"
                ]
              }
            ],
            "id": "subnet-0664dd5a9ea37d94a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226409335413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "selected": "sel1"
            },
            "vpc_id": "vpc-0f3975800d37976f7"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_new_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226409335413:subnet/subnet-0756e827ebef81c26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:selected",
                "values": [
                  "sel2"
                ]
              }
            ],
            "id": "subnet-0756e827ebef81c26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "226409335413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "selected": "sel2"
            },
            "vpc_id": "vpc-0f3975800d37976f7"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226409335413:vpc/vpc-0f3975800d37976f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e3cf56de48b2c471",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-07f7bd854bcc26f5d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f3975800d37976f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0430501e6ad4b9178",
            "owner_id": "226409335413"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:226409335413:instance/i-0090cd93d64c7ce45",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0090cd93d64c7ce45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-ami-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0f9259d38f05830",
            "private_dns": "ip-172-31-80-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.80.132",
            "public_dns": "ec2-54-237-177-5.compute-1.amazonaws.com",
            "public_ip": "54.237.177.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0156357e4b7a987ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220809134826280600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9d83ecaebc16a6d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc3bf65ab454549f"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:226409335413:instance/i-014ddc845ecabac8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014ddc845ecabac8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-ami-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd0d53fbd6e64652",
            "private_dns": "ip-172-31-81-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.81.242",
            "public_dns": "ec2-52-90-89-165.compute-1.amazonaws.com",
            "public_ip": "52.90.89.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7ba6f9a0ec0182d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220809134826280600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9d83ecaebc16a6d",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc3bf65ab454549f"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:loadbalancer/app/tf-default-alb/94e511e891de18e3",
            "arn_suffix": "app/tf-default-alb/94e511e891de18e3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-default-alb-336199342.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:226409335413:loadbalancer/app/tf-default-alb/94e511e891de18e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-default-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dc3bf65ab454549f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0664dd5a9ea37d94a"
              },
              {
                "subnet_id": "subnet-0756e827ebef81c26"
              }
            ],
            "subnets": [
              "subnet-0664dd5a9ea37d94a",
              "subnet-0756e827ebef81c26"
            ],
            "tags": {
              "Name": "tf-default-alb"
            },
            "tags_all": {
              "Name": "tf-default-alb"
            },
            "vpc_id": "vpc-0f3975800d37976f7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.default",
            "data.aws_subnet.subnet_new_1",
            "data.aws_subnet.subnet_new_2",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:listener/app/tf-default-alb/94e511e891de18e3/ba79ece2763a78d6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:226409335413:listener/app/tf-default-alb/94e511e891de18e3/ba79ece2763a78d6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:loadbalancer/app/tf-default-alb/94e511e891de18e3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-lb",
            "aws_lb_target_group.target-group",
            "aws_security_group.default",
            "data.aws_subnet.subnet_new_1",
            "data.aws_subnet.subnet_new_2",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d",
            "arn_suffix": "targetgroup/tf-target-tg/3e9f24908a98de5d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-target-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f3975800d37976f7"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d-20220809134906594800000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d",
            "target_id": "i-0090cd93d64c7ce45"
          },
          "dependencies": [
            "aws_instance.web-new",
            "aws_lb_target_group.target-group",
            "aws_security_group.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d-20220809134906950300000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:226409335413:targetgroup/tf-target-tg/3e9f24908a98de5d",
            "target_id": "i-014ddc845ecabac8b"
          },
          "dependencies": [
            "aws_instance.web-new",
            "aws_lb_target_group.target-group",
            "aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:226409335413:security-group/sg-0dc3bf65ab454549f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dc3bf65ab454549f",
            "ingress": [],
            "name": "terraform-20220809134826280600000001",
            "name_prefix": "terraform-",
            "owner_id": "226409335413",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f3975800d37976f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}